# sma

./: CMakeLists.txt  README.md  TODO.md
doc/: aweighting.gnu  doc.bib  doc.md  elso.tex  makedoc.sh
src/: AWeighted.h  Application.cpp  Application.h  BandPass.h  BiQuad.h  CMakeLists.txt  Config.cpp  Config.h  ITUBS1770.h  Measurement.h  RMSdB.h  ThirdOctave.h  fixed.h  fixie.h  main.cpp
